<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lab9</string>
    <string name="action_settings">Settings</string>
    <string name="xAccStr">x Acceleration</string>
    <string name="yAccStr">y Acceleration</string>
    <string name="zAccStr">z Acceleration</string>
    <string name="accDemo">Accelerometer Demo</string>
    <string name="gesture">Gesture</string>

</resources>
